--- a/html projects/huski/index.html
+++ b/html projects/huski/index.html
@@ -146,6 +146,7 @@
 </section>
 <!---------- Home-Page-Brand Section End ------------>
 
+<!---------- App-Card section Start ------------>
 <section id="app-card-section">
   <div class="osr-container osr-mt-3"> 
     <div class="osr-row app-card-container osr-justify-content-lg-center osr-mx-4 mrl-7">
@@ -261,12 +262,12 @@
             </div>
           </div>
         </div>
-      
-      
     </div>
   </div>
 </section>
+<!---------- App-Card section End ------------>
 
+<!---------- Huski-Plateform section Start ------------>
 <section id="huski-plateform-section">
   <div class="osr-container-fluid">
     <div class="huskiapp-plateform-container">
@@ -295,7 +296,7 @@
                   <a href="#">HOW TO USE?</a>
                   <img src="assests/image/small-icon/arrow-right.png" alt="arrow">
                 </div>
-                <div class="transperent-link-btn osr-ms-sm-4">
+                <div class="transperent-link-btn osr-ms-sm-4 ml-xsm-2">
                   <a href="#">GET A DEMO</a>
                   <img src="assests/image/small-icon/arrow-right-blue.png" alt="arrow">
                 </div>
@@ -307,6 +308,34 @@
     </div>
   </div>
 </section>
+<!---------- Huski-Plateform section End ------------>
+
+<!---------- Huski-purchase-Groth section Start ------------>
+<section id="Huski-purchase-Groth">
+  <div class="osr-container-fluid">
+   <div class="purchase-Groth-container">
+    <div class="osr-row">
+      <div class="osr-col-sm-12 osr-col-lg-5-osr-col-xxl-5">
+        <div class="growth-main-content">
+          <div class="growth-main-heading">
+            <p class="heading fw-500">
+              that 
+              actually elevate your
+              shopify growth
+            </p>
+          </div>
+          <div class="link-btn">
+            <a href="#">HOW TO USE?</a>
+            <img src="assests/image/small-icon/arrow-right.png" alt="arrow-right">
+          </div>
+        </div>
+      </div>
+      <div class="osr-col-sm-12 osr-col-lg-7-osr-col-xxl-7"></div>
+    </div>
+   </div>
+  </div>
+</section>
+<!---------- Huski-purchase-Groth section End ------------>
 
 </main>
 <!---------- Main Section End ------------>
