--- a/html projects/huski/index.html
+++ b/html projects/huski/index.html
@@ -13,12 +13,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oooh+Baby&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Square+Peg&display=swap" rel="stylesheet">
   <!-- font awosame file -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-  <!-- oneonic-grid -->
-  <link rel="stylesheet" href="assests/css/oneonic-grid.min.css">
-  <!-- custom css -->
-  <link rel="stylesheet" href="assests/css/style.css">
+
     <!-- responsive css -->
   <link rel="stylesheet" href="assests/css/responsive.css">
+  <!-- custom css -->
+  <link rel="stylesheet" href="assests/css/style.css">
+  <!-- oneonic-grid -->
+  <link rel="stylesheet" href="assests/css/oneonic-grid.min.css">
 </head>
 <body>
 
@@ -105,7 +106,7 @@
         </div>
         <div class="osr-col-sm-12 osr-col-lg-6 osr-col-xxl-6">
           <div class="homepage-banner-image"><!--Banner-Img-2 Start-->
-            <img src="assests/image/banner-image/homepage-banner-img.png" alt="homepage-sectionimg-2">
+            <img src="assests/image/banner-image/homepage-banner-img.png" class="w-xsm-90" alt="homepage-sectionimg-2">
           </div><!--Banner-Img-2 End-->
         </div>
       </div>
@@ -116,14 +117,14 @@
 
 <!---------- Home-Page-Brand Section Start ------------>
 <section id="homePage-brand-section">
-  <div class="osr-container mtb-5">
-    <div class="osr-row osr-justify-content-center" >
-      <div class=" osr-col-sm-12 osr-col-md-12 osr-col-lg-12 osr-col-xxl-12" >
+  <div class="osr-container ">
+    <div class="osr-row osr-justify-content-center " >
+      <div class=" osr-col-sm-12 osr-col-md-12 osr-col-lg-12 osr-col-xxl-12 " >
         <div class="brand-heading osr-mb-5 osr-me-3">
           <p class="heading"><span class="blue-text fw-600">HUSKIAPP</span> POWERS THE WORLD’S MOST INNOVATIVE BRANDS</p>
         </div>
       </div>
-      <div class="w-50 osr-col-sm-6 osr-col-md-12 osr-col-lg-12 osr-col-xxl-12" >
+      <div class="w-50 osr-col-sm-6 osr-col-md-12 osr-col-lg-12 osr-col-xxl-12 w-xsm-50" >
         <div class="brand-container">
           <span class="brand-img"><img src="assests/image/brands-image/image-6.png" alt="brand-img"></span>
           <span class="brand-img"><img src="assests/image/brands-image/image-7.png" alt="brand-img"></span>
@@ -132,7 +133,7 @@
           <span class="brand-img"><img src="assests/image/brands-image/image-10.png" alt="brand-img"></span>
         </div>
       </div>
-      <div class="w-50 osr-col-sm-6 osr-col-md-12  osr-col-lg-12 osr-col-xxl-12">
+      <div class="w-50 osr-col-sm-6 osr-col-md-12  osr-col-lg-12 osr-col-xxl-12 w-xsm-50">
         <div class="brand-container">
           <span class="brand-img"><img src="assests/image/brands-image/image-11.png" alt="brand-img"></span>
           <span class="brand-img"><img src="assests/image/brands-image/image-12.png" alt="brand-img"></span>
@@ -148,10 +149,10 @@
 
 <!---------- App-Card section Start ------------>
 <section id="app-card-section">
-  <div class="osr-container osr-mt-3"> 
-    <div class="osr-row app-card-container osr-justify-content-lg-center osr-mx-4 mrl-7">
+  <div class="osr-container "> 
+    <div class="osr-row app-card-container osr-justify-content-lg-center  mrl-7">
         <div class="osr-col-sm-12 osr-col-md-12
-        osr-col-lg-9 osr-col-xl-8 osr-col-xxl-8 osr-my-5">
+        osr-col-lg-9 osr-col-xl-8 osr-col-xxl-8 osr-mb-4">
         <div class="app-card-header-content">
           <div class="app-card-heading osr-pb-1">
             <h3 class="heading text-center">
@@ -166,7 +167,7 @@
         </div>
         </div>
         <div class="osr-col-sm-12 osr-col-md-6
-        osr-col-lg-6 osr-col-xl-5 osr-col-xxl-5 osr-py-4">
+        osr-col-lg-6 osr-col-xl-5 osr-col-xxl-5 ">
           <div class="app-card-wrepper">
             <div class="app-card">
               <div class="app-img ">
@@ -190,7 +191,7 @@
           </div>
         </div>
         <div class="osr-col-sm-12 osr-col-md-6
-        osr-col-lg-6 osr-col-xl-5 osr-col-xxl-5 osr-py-4">
+        osr-col-lg-6 osr-col-xl-5 osr-col-xxl-5 ">
           <div class="app-card-wrepper">
             <div class="app-card">
               <div class="app-img">
@@ -214,7 +215,7 @@
           </div>
         </div>
         <div class="osr-col-sm-12 osr-col-md-6
-        osr-col-lg-6 osr-col-xl-5 osr-col-xxl-5 osr-py-4">
+        osr-col-lg-6 osr-col-xl-5 osr-col-xxl-5 ">
           <div class="app-card-wrepper">
             <div class="app-card">
               <div class="app-img">
@@ -239,7 +240,7 @@
           </div>
         </div>
         <div class="osr-col-sm-12 osr-col-md-6
-        osr-col-lg-6 osr-col-xl-5 osr-col-xxl-5 osr-py-4">
+        osr-col-lg-6 osr-col-xl-5 osr-col-xxl-5 ">
           <div class="app-card-wrepper">
             <div class="app-card">
               <div class="app-img">
@@ -271,10 +272,10 @@
 <section id="huski-plateform-section">
   <div class="osr-container-fluid">
     <div class="huskiapp-plateform-container">
-      <div class="osr-row">
+      <div class="osr-row ">
         <div class="osr-col-sm-12 osr-col-lg-6 osr-col-xxl-6">
           <div class="plateform-image">
-            <img src="assests/image/huskiapp-platform-img.png" alt="plateform-img">
+            <img src="assests/image/huskiapp-platform-img.png" class="w-xsm-90" alt="plateform-img">
           </div>
         </div>
         <div class="osr-col-sm-12 osr-col-lg-6 osr-col-xxl-6">
@@ -312,36 +313,204 @@
 
 <!---------- Huski-purchase-Groth section Start ------------>
 <section id="Huski-purchase-Groth">
-  <div class="osr-container-fluid">
-   <div class="purchase-Groth-container">
-    <div class="osr-row">
-      <div class="osr-col-sm-12 osr-col-lg-5-osr-col-xxl-5">
-        <div class="growth-main-content">
-          <div class="growth-main-heading">
-            <p class="heading fw-500">
-              that 
-              actually elevate your
-              shopify growth
-            </p>
-          </div>
-          <div class="link-btn">
-            <a href="#">HOW TO USE?</a>
-            <img src="assests/image/small-icon/arrow-right.png" alt="arrow-right">
+  <!-- <div class="osr-container-fluid"> -->
+   <div class="purchase-growth-container">
+    <div class="osr-row osr-justify-content-sm-center osr-justify-content-lg-center">
+      <div class="osr-col-sm-12 osr-col-lg-12 osr-col-xl-5 osr-col-xxl-5">
+        <div class="growth-main-wrapper">
+          <img src="assests/image/huski-trasperent-image.png" alt="">
+          <div class="growth-main-content">
+            <div class="growth-main-heading ">
+            <p class="heading fw-500"><span class="huski-img"><img src="assests/image/huski-small/huski-growth-img.png" alt=""></span> that 
+              <br>
+                actually elevate your
+                shopify growth
+              </p>
+            </div>
+            <div class="link-btn ">
+              <a href="#">HOW TO USE?</a>
+              <img src="assests/image/small-icon/arrow-right.png" alt="arrow-right">
+            </div>
           </div>
         </div>
       </div>
-      <div class="osr-col-sm-12 osr-col-lg-7-osr-col-xxl-7"></div>
+      <div class="osr-col-sm-12 osr-col-lg-12 osr-col-xl-7 osr-col-xxl-7 ">
+        <div class="repeat-purchase-wrepper">
+          <div class="repeat-purchase-container">
+            <div class="repeat-purchase-heading">
+              <h5 class="heading">
+                Increase your repeat purchase with our apps
+              </h5>
+            </div>
+            <div class="repeat-purchase-description osr-mb-3">
+              <p class="description letter-space">
+                We put all your retention solutions on one platform, so you can create seamless post-purchase journeys tailored to each customer and trac
+              </p>
+            </div>
+            <div class="purchase-theme-video-content">
+              <div class="puchase-theme-heading osr-mb-3 osr-pb-3">
+                <h6 class="heading">
+                  See it in action with Huski Products
+                </h6>
+              </div>
+              <div class="theme-photo-container">
+                <div class="theme-video">
+                  <img src="assests/image/huski-product-img-1.png" alt="">
+                  <div class="theme-video-btn">
+                    <button>
+                      <img src="assests/image/small-icon/play-btn-black.png" alt="play-button">
+                    </button>
+                  </div>
+                </div>
+                <div class="theme-photo osr-mt-sm-3 osr-mt-lg-0">
+                  <img src="assests/image/huski-product-img-2.png" alt="product-img">
+                </div>
+                <div class="theme-photo osr-mt-sm-3 osr-mt-lg-0">
+                  <img src="assests/image/huski-product-img-3.png" alt="product-img">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
    </div>
-  </div>
+  <!-- </div> -->
 </section>
 <!---------- Huski-purchase-Groth section End ------------>
-
+<!---------- Home-Page-Blog section Start ------------>
+<section id="homepage-blog-section">
+  <div class="osr-container">
+    <div class="homepage-blog-container">
+      <div class="homepage-blog-container-heading">
+        <h5 class="blog-container-heading fw-600">
+          Read the latest from Huskiapps
+        </h5>
+      </div>
+      <div class="osr-row osr-justify-content-xl-start osr-justify-content-md-evenly">
+        <div class="osr-col-sm-12 osr-col-md-6 osr-col-lg-5 osr-col-xl-4 osr-col-xxl-4">
+          <div class="homepage-blog-card">
+            <div class="blog-img">
+              <img src="assests/image/blog-img/Rectangle 23.png" alt="blog-img">
+            </div>
+            <div class="homepage-blog-heading">
+              <h6 class="heading fw-600">
+                New Sections has been updated and Explore more
+              </h6>
+            </div>
+            <div class="homepage-blog-detail">
+              <p class="detail letter-space">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="osr-col-sm-12 osr-col-md-6 osr-col-lg-5 osr-col-xl-4 osr-col-xxl-4">
+          <div class="homepage-blog-card">
+              <div class="blog-img">
+                <img src="assests/image/blog-img/Rectangle 23.png" alt="blog-img">
+              </div>
+              <div class="homepage-blog-heading">
+                <h6 class="heading fw-600">
+                  New Sections has been updated and Explore more
+                </h6>
+              </div>
+              <div class="homepage-blog-detail">
+                <p class="detail letter-space">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+                </p>
+              </div>
+          </div>
+        </div>
+        <div class="osr-col-sm-12 osr-col-md-6 osr-col-lg-5 osr-col-xl-4 osr-col-xxl-4">
+          <div class="homepage-blog-card">
+            <div class="blog-img">
+              <img src="assests/image/blog-img/Rectangle 23.png" alt="blog-img">
+            </div>
+            <div class="homepage-blog-heading">
+              <h6 class="heading fw-600">
+                New Sections has been updated and Explore more
+              </h6>
+            </div>
+            <div class="homepage-blog-detail">
+              <p class="detail letter-space">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!---------- Home-Page-Blog section End ------------>
 </main>
 <!---------- Main Section End ------------>
 
 <!---------- Footer Section Start ------------>
 <footer>
+<!---------- Inquery section Start ------------>
+<section id="inquery-section">
+  <div class="inquery-container ">
+    <div class="osr-container">
+      <div class="inquery-heading">
+        <p class="heading fw-700">
+          Don’t just take our word for it  
+          meet our brands.
+        </p>
+      </div>
+      <div class="email-container">
+        <div class="inquery-email">
+          <input type="email"  placeholder="Enter your Email">
+          <input type="submit" value="SUBSCRIBE">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!---------- Inquery section End ------------>
+<!---------- Footer-link section Start ------------>
+<section id="footer-link-section">
+  <div class="osr-row osr-justify-content-center">
+    <div class="osr-col-sm-12 osr-col-md-6 osr-col-lg-4 osr-col-xxl-4">
+      <div class="shopify-app-footer-link">
+        <h6 class="link-heading"> Our Shopify Apps</h6>
+        <a href="#" class="links">TermsBee - I Agree To Terms</a>
+        <a href="#" class="links">Aiosections Easy Page Builder</a>
+        <a href="#" class="links">Product Sample & Memo</a>
+        <a href="#" class="links">Giftman - Gift Wrap & Message</a>
+      </div>
+    </div>
+    <div class="osr-col-sm-12 osr-col-md-6 osr-col-lg-4 osr-col-xxl-4">
+      <div class="shopify-app-footer-link">
+        <h6 class="link-heading">Usefull Links</h6>
+        <a href="#" class="links">About us</a>
+        <a href="#" class="links">Affiliate</a>
+        <a href="#" class="links">Contact us</a>
+        <a href="#" class="links">Privacy & Policy</a>
+        <a href="#" class="links">Terms & Condition</a>
+      </div>
+    </div>
+    <div class="osr-col-sm-10 osr-col-md-8 osr-col-lg-4 osr-col-xxl-4">
+      <div class="shopify-app-update">
+        <h6 class="link-heading">Get our Latest Update</h6>
+        <div class="email">
+          <input type="email" name="email" id="email" placeholder="Enter your Email">
+        </div>
+        <div class="subscribe">
+          <input type="submit" value="SUBSCRIBE">
+        </div>
+      </div>
+  </div>
+</section>
+<!---------- Footer-link section End ------------>
+<div class="osr-container">
+  <div class="copyright-section">
+    <div class="huskiapp-img">
+      <img src="assests/image/huski-small/copyright.png" alt="huski-img">
+    </div>
+  </div>
+</div>
 
 </footer>
 <!---------- Footer Section End ------------>
